--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+/* we are using it for uploadThings */
+@import "uploadthing/tw/v4";
+@source "../../node_modules/@uploadthing/react/dist";
 
 :root {
   --background: #ffffff;
